[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://objects/system/label/CustomLabel.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "float_in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "float_out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="CustomLabel" type="Node2D"]
z_index = 101
z_as_relative = false
script = ExtResource( 2 )

[node name="LabelAnim" type="AnimationPlayer" parent="."]
anims/float_in = SubResource( 1 )
anims/float_out = SubResource( 2 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = -20.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 1 )

[node name="AnimatedSprite1" type="AnimatedSprite" parent="."]
offset = Vector2( -14, 5 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
offset = Vector2( -32, 5 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
